add actuator to project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,13 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/my_db
 spring.datasource.username=postgres
 spring.datasource.password=admin
+management.endpoint.info.enabled=true
+management.info.env.enabled=true
+management.endpoints.web.exposure.include=*
+spring.security.user.name=polina
+spring.security.user.password=polina
+
+info.name = Spring Data REST
+info.description = Spring Boot REST application. \
+  This app is used for CRUD operations with  employees of our company
+info.autor = Polina
